Edit opacity animation to run correctly on mobile devices

--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -15,7 +15,6 @@
 .projectBook {
 	columns: 3;
 	column-gap: 3px;
-	transition: all 500ms;
 }
 
 .projectShelfCard {
@@ -27,7 +26,6 @@
 
 .projectShelfCard img {
 	width: 100%;
-	transition: all 500ms;
 }
 
 .cardFlip {
